# timecomply

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ai-feature.md  bug.md
.github/workflows/: ai-implement.yml  cd.yml  ci.yml  claude-code-review.yml  claude.yml
apps/accounts/: models.py
apps/api/: urls.py
apps/approvals/: models.py  urls.py  views.py
apps/companies/: admin.py  middleware.py  models.py  urls.py  views.py
apps/projects/: admin.py  models.py  signals.py  urls.py  views.py
apps/timesheets/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
docs/: architecture.md  dcaa-requirements.md  developer-guide.md  product-requirements.md  system-spec.md
static/css/: main.css
static/js/: main.js
templates/: base.html  dashboard.html
templates/account/: email_confirm.html  login.html  password_reset.html  signup.html
templates/approvals/: setup.html
templates/companies/: invite.html  invite_invalid.html  members.html  register.html  settings.html
templates/email/: invitation.txt
templates/projects/: confirm_archive.html  confirm_deactivate.html  confirm_delete.html  confirm_unarchive.html  form.html  list.html
templates/timesheets/: confirm_delete_period.html  entry.html  list.html  periods.html  presets.html  submit_confirm.html  weekly.html
tests/: conftest.py
tests/accounts/: test_auth.py  test_social_auth.py
(+35 files in other folders)
